# Sim-as-a-Judge

./: .gitignore  LICENSE  README.md  pyproject.toml  replay_and_evaluate.py  requirements.txt
assets/g1_29dof/g1-29dof-dex1-base-fix-usd/: config.yaml
assets/g1_29dof/g1-29dof-dex3-base-fix-usd/: config.yaml
assets/g1_29dof/g1-29dof-inspire-base-fix-usd/: config.yaml
assets/g1_29dof/g1-29dof_wholebody_dex1/: config.yaml
assets/g1_29dof/g1-29dof_wholebody_dex3/: config.yaml
assets/g1_29dof/g1-29dof_wholebody_inspire/: config.yaml
assets/g1_29dof/h1_2-26dof-inspire-base-fix-usd/: config.yaml
configs/: eval_config.yaml  pick_place.yaml
configs/joint_maps/: g1_inspire.yaml
configs/scenes/: default.yaml  pick_place_apple.yaml  stack_blocks.yaml
data/sample/: episode_000000.parquet
scripts/: setup_env.sh  verify_env.py
sim_judge/: __init__.py  aggregate.py  batch.py  collision_checker.py  config_loader.py  gravity_checker.py  joint_limit_checker.py  json_data_loader.py  report.py  scene_builder.py  scene_config.py  task_fidelity_checker.py  verify_env.py
tests/: test_batch_eval.py  test_config_loader.py  test_json_data_loader.py  test_replay_integration.py  test_scene_config.py  test_verify_env.py
